# finam-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  fastmcp.json  pyproject.toml
src/: cli.py  conifg.py  main.py  middleware.py
src/servers/: account.py  assets.py  market_data.py  order.py
src/tradeapi/: base.py  client.py  finam.py  finam_client.py  models.py
src/tradeapi/docs/: finam_orders.md
src/tradeapi/order/: models.py  orders.py
tests/: conftest.py
tests/e2e/: market_data.py  test_assets.py  test_market_data.py
