[project]
name = "finam-mcp"
version = "0.1.0"
description = "Finam Trade API MCP server"
requires-python = "==3.12.6"
dependencies = [
    "fastmcp>=2.13.1",
    "finam-trade-api>=4.1.0",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.2.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
